B10 #17: GET /datasets/{id}/contract returns the contract in force (client: get_contract)
Closes #17
